--- a/styles/global.css
+++ b/styles/global.css
@@ -19,6 +19,7 @@ html {
     --grey-dark: #4D5E77;
     --grey-blue: #A1B2CD;
     --grey-light: #E5EAF1;
+    --grey-medium: #eaecf2;
 
     /* 1rem = 16px (User Agent) = 100% (User Agent) */
     font-size: 62.5%
@@ -91,7 +92,8 @@ button:hover,
     filter: brightness(1.2);
 }
 
-button>img .button>img {
+button>img,
+.button>img {
     margin-right: 1rem;
     width: 2rem;
 }
@@ -102,6 +104,20 @@ button.outlined,
     color: var(--blue);
     border: .2rem solid var(--blue);
 }
+
+button.red,
+.button.red {
+    background: var(--red);
+    color: var(--white);
+}
+
+button.gray,
+.button.gray {
+    background: var(--gray-light);
+    color: var(--grey-dark);
+}
+
+/* HEADER */
 
 .content header {
     width: 80%;
