--- a/public/styles/modal.css
+++ b/public/styles/modal.css
@@ -1,25 +1,27 @@
+.modal-wrapper.active {
+    visibility: visible;
+    opacity: 1;
+}
+
 .modal-wrapper {
     position: fixed;
     width: 100vw;
     height: 100vh;
-
     top: 0;
     left: 0;
     display: flex;
-
     background: rgba(4, 9, 17, 0.8);
+    visibility: hidden;
+    opacity: 0;
 }
 
 .modal-wrapper .modal {
     width: min(59rem, 90%);
     background: var(--white);
     margin: auto;
-
     border-radius: .8rem;
-
     font-family: 'Poppins', sans-serif;
     text-align: center;
-
     padding: 6.4rem;
 }
 
