--- a/src/views/room.ejs
+++ b/src/views/room.ejs
@@ -16,22 +16,26 @@
     <!-- FONTS -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
+
+    <!-- SCRIPTS -->
+    <script src="scripts/main.js" defer type="module"></script>
+
 </head>
 
 <body>
     <div id="room" class="content">
         <header>
-            <a href="#">
-                <img src="../assets/logo.svg" alt="Rocket.Q Logo" class="logo" />
+            <a href="/">
+                <img src="../images/logo.svg" alt="Rocket.Q Logo" class="logo" />
             </a>
             <div class="buttons">
 
-                <div class="button outlined">
+                <div class="button outlined" id="room-id" data-id="323243">
                     #323243
-                    <img src="../assets/copy.svg" alt="Copiar número da sala">
+                    <img src="../images/copy.svg" alt="Copiar número da sala">
                 </div>
                 <a href="#" class="button">
-                    <img id="img-button" src="../assets/users-white.svg" alt="Criar uma sala"> Criar Sala
+                    <img id="img-button" src="../images/users-white.svg" alt="Criar uma sala"> Criar Sala
                 </a>
             </div>
         </header>
@@ -45,7 +49,7 @@
 
                     <footer>
                         <div>
-                            <img src="../assets/lock.svg" alt="cadeado"> Está pergunta é anônima
+                            <img src="../images/lock.svg" alt="cadeado"> Está pergunta é anônima
                         </div>
                         <button>Enviar</button>
                     </footer>
@@ -60,62 +64,62 @@
                     <div class="question-wrapper">
                         <div class="question-content">
                             <div class="user">
-                                <img src="../assets/user.svg" alt="Avatar">
+                                <img src="../images/user.svg" alt="Avatar">
                             </div>
                             <div class="question">
                                 <p>Qual a diferença entre const, var e let no JavaScript?</p>
                             </div>
                         </div>
                         <div class="actions">
-                            <a class="check" href="#"><img src="../assets/check.svg" alt="Marcar como lida">Marcar como lida
+                            <a class="check" href="#" data-id="2"><img src="../images/check.svg" alt="Marcar como lida">Marcar como lida
                             </a>
-                            <a class="delete" href="#"><img src="../assets/trash.svg" alt="Excluir">Excluir</a>
+                            <a class="delete" href="#" data-id="2"><img src="../images/trash.svg" alt="Excluir">Excluir</a>
                         </div>
                     </div>
 
                     <div class="question-wrapper">
                         <div class="question-content">
                             <div class="user">
-                                <img src="../assets/user.svg" alt="Avatar">
+                                <img src="../images/user.svg" alt="Avatar">
                             </div>
                             <div class="question">
                                 <p>O que é JavaScript?</p>
                             </div>
                         </div>
                         <div class="actions">
-                            <a class="check" href="#"><img src="../assets/check.svg" alt="Marcar como lida">Marcar como lida
+                            <a class="check" href="#" data-id="3"><img src="../images/check.svg" alt="Marcar como lida">Marcar como lida
                             </a>
-                            <a class="delete" href="#"><img src="../assets/trash.svg" alt="Excluir">Excluir</a>
+                            <a class="delete" href="#" data-id="3"><img src="../images/trash.svg" alt="Excluir">Excluir</a>
                         </div>
                     </div>
 
                     <div class="question-wrapper read">
                         <div class="question-content">
                             <div class="user">
-                                <img src="../assets/user.svg" alt="Avatar">
+                                <img src="../images/user.svg" alt="Avatar">
                             </div>
                             <div class="question">
                                 <p>O que é TypeScript?</p>
                             </div>
                         </div>
                         <div class="actions">
-                            <a class="delete" href="#"><img src="../assets/trash.svg" alt="Excluir">Excluir</a>
+                            <a class="delete" href="#" data-id="1"><img src="../images/trash.svg" alt="Excluir">Excluir</a>
                         </div>
                     </div>
 
                     <div class="question-wrapper">
                         <div class="question-content">
                             <div class="user">
-                                <img src="../assets/user.svg" alt="Avatar">
+                                <img src="../images/user.svg" alt="Avatar">
                             </div>
                             <div class="question">
                                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime officiis ex magnam. Expedita et unde, cumque ullam quod molestiae Zodit alias possimus! Corporis, quis labore nulla eveniet possimus fugiat in!?</p>
                             </div>
                         </div>
                         <div class="actions">
-                            <a class="check" href="#"><img src="../assets/check.svg" alt="Marcar como lida">Marcar como lida
+                            <a class="check" href="#" data-id="4"><img src="../images/check.svg" alt="Marcar como lida">Marcar como lida
                             </a>
-                            <a class="delete" href="#"><img src="../assets/trash.svg" alt="Excluir">Excluir</a>
+                            <a class="delete" href="#" data-id="4"><img src="../images/trash.svg" alt="Excluir">Excluir</a>
                         </div>
                     </div>
 
@@ -137,12 +141,12 @@
             <h2>Excluir pergunta</h2>
             <p>Tem certeza que você deseja excluir esta pergunta</p>
 
-            <form action="#">
+            <form action="#" method="POST">
                 <label for-id="password" class="sr-only">Digite sua senha admin</label>
                 <input id="password" type="password" name="password" placeholder="Digite sua Senha">
 
                 <div class="buttons">
-                    <div class="button gray">Cancelar</div>
+                    <div class="button gray cancel">Cancelar</div>
                     <button class="button red">Sim, Excluir</button>
                 </div>
             </form>
