--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -12,18 +12,37 @@ html {
     --red: #E83F5B;
     --light-blue: #E0ECFF;
     --blue: #3485FF;
-    --background: #F6FAFF;
     --overlay: #040911;
     --icons-details: #A5B0C1;
-
     --grey-dark: #4D5E77;
     --grey-blue: #A1B2CD;
     --grey-light: #E5EAF1;
     --grey-medium: #eaecf2;
-
+    /* cores que vão mudar no darktheme */
+    --titulos: var(--black);
+    -text: #131313;
+    --background: #F6FAFF;
+    --question-bg: #E0ECFF;
+    --border-button: none;
+    --border-question: none;
+    --question-read: #eaecf2;
+    --question-read-text: #4D5E77;
+    --modal-text: #4D5E77;
     /* 1rem = 16px (User Agent) = 100% (User Agent) */
-    font-size: 62.5% 
-        /* 10px */
+    font-size: 62.5%
+    /* 10px */
+}
+
+html.dark {
+    --background: #0D114F;
+    --titulos: #ffffff;
+    --text: #ffffff;
+    --question-bg: #4D5E77;
+    --border-button: #E5EAF1;
+    --border-question: #4D5E77;
+    --question-read: #0D114F;
+    --question-read-text: #A5B0C1;
+    --modal-text: #E5EAF1;
 }
 
 body {
@@ -38,7 +57,6 @@ input,
 textarea {
     /* intervalo de tamanho */
     font-size: clamp(14px, 1.6rem, 2vw);
-
     font-family: 'Open Sans', sans-serif;
     /* font-family: 'Poppins', sans-serif; */
 }
@@ -62,6 +80,7 @@ textarea {
 
 
 /*--------- input and buttons*/
+
 input,
 button,
 .button {
@@ -74,16 +93,12 @@ button,
     font-family: 'Poppins';
     font-weight: 500;
     line-height: 0;
-
     display: flex;
     align-items: center;
     justify-content: center;
-
     background: var(--blue);
     color: var(--white);
-
     transition: filter .2s;
-
     cursor: pointer;
 }
 
@@ -100,7 +115,7 @@ button>img,
 
 button.outlined,
 .button.outlined {
-    background: var(--white);
+    background: var(--background);
     color: var(--blue);
     border: .2rem solid var(--blue);
 }
@@ -113,9 +128,10 @@ button.red,
 
 button.gray,
 .button.gray {
-    background: var(--gray-light);
+    background: var(--grey-light);
     color: var(--grey-dark);
 }
+
 
 /* HEADER */
 
@@ -126,4 +142,9 @@ button.gray,
 
 .content header img.logo {
     width: 16.7rem;
+}
+
+.content .toggle {
+    width: 80%;
+    margin: 3.5rem auto;
 }
