--- a/public/styles/modal.css
+++ b/public/styles/modal.css
@@ -17,7 +17,7 @@
 
 .modal-wrapper .modal {
     width: min(59rem, 90%);
-    background: var(--white);
+    background: var(--background);
     margin: auto;
     border-radius: .8rem;
     font-family: 'Poppins', sans-serif;
@@ -29,12 +29,12 @@
     font-size: 2.4rem;
     font-weight: 700;
     margin-bottom: 1.2rem;
-    color: var(--black);
+    color: var(--titulos);
 }
 
 .modal-wrapper .modal p {
     margin-bottom: 2.4rem;
-    color: var(--grey-dark);
+    color: var(--modal-text);
 }
 
 .modal-wrapper .modal input {
@@ -49,6 +49,10 @@
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.modal-wrapper .modal .buttons .button.cancel {
+    border: .2rem solid var(--border-button);
 }
 
 .modal-wrapper .modal .buttons>.button {
