--- a/src/views/room.ejs
+++ b/src/views/room.ejs
@@ -15,10 +15,12 @@
 
     <!-- FONTS -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;500;700&display=swap"
+        rel="stylesheet">
 
     <!-- SCRIPTS -->
     <script src="/scripts/main.js" defer type="module"></script>
+    <script src="/scripts/dark.js" defer type="module"></script>
 
 </head>
 
@@ -26,27 +28,32 @@
     <div id="room" class="content">
         <header>
             <a href="/">
-                <img src="../images/logo.svg" alt="Rocket.Q Logo" class="logo" />
+                <img src="../images/logo.svg" alt="Rocket.Q Logo" class="logo" id="logo" />
             </a>
             <div class="buttons">
 
                 <div class="button outlined" id="room-id" data-id="<%= roomId %>">
                     #
                     <%= roomId %>
-                        <img src="../images/copy.svg" alt="Copiar número da sala">
+                        <img src="../images/copy.svg" alt="Copiar número da sala" id="copy">
                 </div>
                 <a href="/create-pass" class="button">
                     <img id="img-button" src="../images/users-white.svg" alt="Criar uma sala"> Criar Sala
                 </a>
             </div>
         </header>
+        <div class="toggle">
+            <input id="switch" type="checkbox" name="theme" onclick="darkMode()">
+            <label id="toggle" for="switch">Toggle</label>
+        </div>
 
         <main>
             <section id="question-form">
                 <h2>Faça sua pergunta</h2>
                 <form action="/question/create/<%= roomId %>" method="POST">
                     <label class="sr-only" for-id="question">O que você quer perguntar?</label>
-                    <textarea name="question" id="question" placeholder="O que você quer perguntar?"></textarea>
+                    <textarea required name="question" id="question"
+                        placeholder="O que você quer perguntar?"></textarea>
 
                     <footer>
                         <div>
@@ -65,43 +72,49 @@
                         <%- include('parts/no-question') %>
 
                             <% } %>
-                                <% questions.forEach(question=> { %>
-                                    <div class="question-wrapper">
-                                        <div class="question-content">
-                                            <div class="user">
-                                                <img src="../images/user.svg" alt="Avatar">
-                                            </div>
-                                            <div class="question">
-                                                <p>
-                                                    <%= question.title %>
-                                                </p>
-                                            </div>
-                                        </div>
-                                        <div class="actions">
-                                            <a class="check" href="#" data-id="<%= question.id %>"><img src="../images/check.svg" alt="Marcar como lida">Marcar como lida
-                                            </a>
-                                            <a class="delete" href="#" data-id="<%= question.id %>"><img src="../images/trash.svg" alt="Excluir">Excluir</a>
-                                        </div>
-                                    </div>
-                                    <% }) %>
+                                            <% questions.forEach(question=> { %>
+                                                <div class="question-wrapper">
+                                                    <div class="question-content">
+                                                        <div class="user">
+                                                            <img src="../images/user.svg" alt="Avatar">
+                                                        </div>
+                                                        <div class="question">
+                                                            <p>
+                                                                <%= question.title %>
+                                                            </p>
+                                                        </div>
+                                                    </div>
+                                                    <div class="actions">
+                                                        <a class="check" href="#" data-id="<%= question.id %>"><img
+                                                                src="../images/check.svg" alt="Marcar como lida">Marcar
+                                                            como lida
+                                                        </a>
+                                                        <a class="delete" href="#" data-id="<%= question.id %>"><img
+                                                                src="../images/trash.svg" alt="Excluir">Excluir</a>
+                                                    </div>
+                                                </div>
+                                                <% }) %>
 
-                                        <% questionsRead.forEach(questionRead=> { %>
-                                            <div class="question-wrapper read">
-                                                <div class="question-content">
-                                                    <div class="user">
-                                                        <img src="../images/user.svg" alt="Avatar">
-                                                    </div>
-                                                    <div class="question">
-                                                        <p>
-                                                            <%= questionRead.title%>
-                                                        </p>
-                                                    </div>
-                                                </div>
-                                                <div class="actions">
-                                                    <a class="delete" href="#" data-id="<%= questionRead.id %>"><img src="../images/trash.svg" alt="Excluir">Excluir</a>
-                                                </div>
-                                            </div>
-                                            <% }) %>
+                                                    <% questionsRead.forEach(questionRead=> { %>
+                                                        <div class="question-wrapper read">
+                                                            <div class="question-content">
+                                                                <div class="user">
+                                                                    <img src="../images/user.svg" alt="Avatar">
+                                                                </div>
+                                                                <div class="question">
+                                                                    <p>
+                                                                        <%= questionRead.title%>
+                                                                    </p>
+                                                                </div>
+                                                            </div>
+                                                            <div class="actions">
+                                                                <a class="delete" href="#"
+                                                                    data-id="<%= questionRead.id %>"><img
+                                                                        src="../images/trash.svg"
+                                                                        alt="Excluir">Excluir</a>
+                                                            </div>
+                                                        </div>
+                                                        <% }) %>
                 </div>
 
             </section>
@@ -131,6 +144,8 @@
             </form>
         </div>
     </div>
+
+
 </body>
 
 </html>
