Exibindo alerta na página da sala, ao invés de redirecionar para uma view apenas para exibir o alerta

--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -17,7 +17,7 @@ header a {
 
 #bg {
     grid-area: left;
-    background: url('../images/home-bg-img.svg') no-repeat top/contain;
+    background: url('/images/home-bg-img.svg') no-repeat top/contain;
     background-position-x: -1.0rem;
 }
 
