--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -9,8 +9,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- CSS -->
-    <link rel="stylesheet" href="../styles/global.css">
-    <link rel="stylesheet" href="../styles/home.css">
+    <link rel="stylesheet" href="/styles/global.css">
+    <link rel="stylesheet" href="/styles/home.css">
 
     <!-- FONTS -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -26,7 +26,7 @@
     <div id="home" class="content">
         <header>
             <a href="/">
-                <img src="../images/Logo.svg" alt="Rocket.Q Logo" class="logo" id="logo" />
+                <img src="/images/Logo.svg" alt="Rocket.Q Logo" class="logo" id="logo" />
             </a>
         </header>
 
