--- a/src/views/room.ejs
+++ b/src/views/room.ejs
@@ -1,149 +1,155 @@
 <!DOCTYPE html>
 
 <head>
-    <title>Perguntas e Respostas - Rocket.Q</title>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<title>Perguntas e Respostas - Rocket.Q</title>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <!-- View Port -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!-- View Port -->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- CSS -->
-    <link rel="stylesheet" href="../styles/global.css">
-    <link rel="stylesheet" href="../styles/room.css">
-    <link rel="stylesheet" href="../styles/modal.css">
+	<!-- CSS -->
+	<link rel="stylesheet" href="/styles/global.css">
+	<link rel="stylesheet" href="/styles/room.css">
+	<link rel="stylesheet" href="/styles/modal.css">
 
-    <!-- FONTS -->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;500;700&display=swap"
-        rel="stylesheet">
+	<!-- FONTS -->
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+	<link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;500;700&display=swap"
+		rel="stylesheet">
 
-    <!-- SCRIPTS -->
-    <script src="/scripts/main.js" defer type="module"></script>
-    <script src="/scripts/dark.js" defer type="module"></script>
+	<!-- SCRIPTS -->
+	<script src="/scripts/main.js" defer type="module"></script>
+	<script src="/scripts/dark.js" defer type="module"></script>
 
 </head>
 
 <body>
-    <div id="room" class="content">
-        <header>
-            <a href="/">
-                <img src="../images/logo.svg" alt="Rocket.Q Logo" class="logo" id="logo" />
-            </a>
-            <div class="buttons">
+	<div id="room" class="content">
+		<header>
+			<a href="/">
+				<img src="/images/logo.svg" alt="Rocket.Q Logo" class="logo" id="logo" />
+			</a>
+			<div class="buttons">
 
-                <div class="button outlined" id="room-id" data-id="<%= roomId %>">
-                    #
-                    <%= roomId %>
-                        <img src="../images/copy.svg" alt="Copiar número da sala" id="copy">
-                </div>
-                <a href="/create-pass" class="button">
-                    <img id="img-button" src="../images/users-white.svg" alt="Criar uma sala"> Criar Sala
-                </a>
-            </div>
-        </header>
-        <div class="toggle">
-            <input id="switch" type="checkbox" name="theme" onclick="darkMode()">
-            <label id="toggle" for="switch">Toggle</label>
-        </div>
+				<div class="button outlined" id="room-id" data-id="<%= roomId %>">
+					#
+					<%= roomId %>
+						<img src="/images/copy.svg" alt="Copiar número da sala" id="copy">
+				</div>
+				<a href="/create-pass" class="button">
+					<img id="img-button" src="/images/users-white.svg" alt="Criar uma sala"> Criar Sala
+				</a>
+			</div>
+		</header>
+		<div class="toggle">
+			<input id="switch" type="checkbox" name="theme" onclick="darkMode()">
+			<label id="toggle" for="switch">Toggle</label>
+		</div>
 
-        <main>
-            <section id="question-form">
-                <h2>Faça sua pergunta</h2>
-                <form action="/question/create/<%= roomId %>" method="POST">
-                    <label class="sr-only" for-id="question">O que você quer perguntar?</label>
-                    <textarea required name="question" id="question"
-                        placeholder="O que você quer perguntar?"></textarea>
+		<main>
+			<section id="question-form">
+				<h2>Faça sua pergunta</h2>
+				<form action="/question/create/<%= roomId %>" method="POST">
+					<label class="sr-only" for-id="question">O que você quer perguntar?</label>
+					<textarea required name="question" id="question" placeholder="O que você quer perguntar?"></textarea>
 
-                    <footer>
-                        <div>
-                            <img src="../images/lock.svg" alt="cadeado"> Está pergunta é anônima
-                        </div>
-                        <button>Enviar</button>
-                    </footer>
-                </form>
-            </section>
+					<footer>
+						<div>
+							<img src="/images/lock.svg" alt="cadeado"> Está pergunta é anônima
+						</div>
+						<button>Enviar</button>
+					</footer>
+				</form>
+			</section>
 
-            <section id="questions">
-                <h2 class="sr-only">Lista e perguntas</h2>
-                <div class="questions">
-                    <% if (isNoQuestions){ %>
+			<section id="questions">
+				<h2 class="sr-only">Lista e perguntas</h2>
+				<div class="questions">
+					<% if (isNoQuestions){ %>
 
-                        <%- include('parts/no-question') %>
+						<%- include('parts/no-question') %>
 
-                            <% } %>
-                                            <% questions.forEach(question=> { %>
-                                                <div class="question-wrapper">
-                                                    <div class="question-content">
-                                                        <div class="user">
-                                                            <img src="../images/user.svg" alt="Avatar">
-                                                        </div>
-                                                        <div class="question">
-                                                            <p>
-                                                                <%= question.title %>
-                                                            </p>
-                                                        </div>
-                                                    </div>
-                                                    <div class="actions">
-                                                        <a class="check" href="#" data-id="<%= question.id %>"><img
-                                                                src="../images/check.svg" alt="Marcar como lida">Marcar
-                                                            como lida
-                                                        </a>
-                                                        <a class="delete" href="#" data-id="<%= question.id %>"><img
-                                                                src="../images/trash.svg" alt="Excluir">Excluir</a>
-                                                    </div>
-                                                </div>
-                                                <% }) %>
+							<% } %>
+								<% questions.forEach(question=> { %>
+									<div class="question-wrapper">
+										<div class="question-content">
+											<div class="user">
+												<img src="/images/user.svg" alt="Avatar">
+											</div>
+											<div class="question">
+												<p>
+													<%= question.title %>
+												</p>
+											</div>
+										</div>
+										<div class="actions">
+											<a class="check" href="#" data-id="<%= question.id %>"><img src="/images/check.svg"
+													alt="Marcar como lida">Marcar
+												como lida
+											</a>
+											<a class="delete" href="#" data-id="<%= question.id %>"><img src="/images/trash.svg"
+													alt="Excluir">Excluir</a>
+										</div>
+									</div>
+									<% }) %>
 
-                                                    <% questionsRead.forEach(questionRead=> { %>
-                                                        <div class="question-wrapper read">
-                                                            <div class="question-content">
-                                                                <div class="user">
-                                                                    <img src="../images/user.svg" alt="Avatar">
-                                                                </div>
-                                                                <div class="question">
-                                                                    <p>
-                                                                        <%= questionRead.title%>
-                                                                    </p>
-                                                                </div>
-                                                            </div>
-                                                            <div class="actions">
-                                                                <a class="delete" href="#"
-                                                                    data-id="<%= questionRead.id %>"><img
-                                                                        src="../images/trash.svg"
-                                                                        alt="Excluir">Excluir</a>
-                                                            </div>
-                                                        </div>
-                                                        <% }) %>
-                </div>
+										<% questionsRead.forEach(questionRead=> { %>
+											<div class="question-wrapper read">
+												<div class="question-content">
+													<div class="user">
+														<img src="/images/user.svg" alt="Avatar">
+													</div>
+													<div class="question">
+														<p>
+															<%= questionRead.title%>
+														</p>
+													</div>
+												</div>
+												<div class="actions">
+													<a class="delete" href="#" data-id="<%= questionRead.id %>"><img src="/images/trash.svg"
+															alt="Excluir">Excluir</a>
+												</div>
+											</div>
+											<% }) %>
+				</div>
 
-            </section>
+			</section>
 
-            <!-- distanciando as questions do fim da pag com sr-only -->
-            <footer class="footer">
-                <h2 class="sr-only">footer</h2>
-            </footer>
+			<!-- distanciando as questions do fim da pag com sr-only -->
+			<footer class="footer">
+				<h2 class="sr-only">footer</h2>
+			</footer>
+			<% if (error == "incorrectPassword") { %>
+				<script>
+					alert("Senha incorreta")
+					const url = window.location.href;
+					const parts = url.split('/')
+					// pega o id da página
+					const id = parts[parts.length - 2]
+					window.location.href = `/room/${id}`
+				</script>
+			<% } %>
+		</main>
 
-        </main>
+	</div>
+	<!-- MODAL -->
+	<div class="modal-wrapper">
+		<div class="modal">
+			<h2>Excluir pergunta</h2>
+			<p>Tem certeza que você deseja excluir esta pergunta</p>
 
-    </div>
-    <!-- MODAL -->
-    <div class="modal-wrapper">
-        <div class="modal">
-            <h2>Excluir pergunta</h2>
-            <p>Tem certeza que você deseja excluir esta pergunta</p>
+			<form action="#" method="POST">
+				<label for-id="password" class="sr-only">Digite sua senha admin</label>
+				<input id="password" type="password" name="password" placeholder="Digite sua Senha">
 
-            <form action="#" method="POST">
-                <label for-id="password" class="sr-only">Digite sua senha admin</label>
-                <input id="password" type="password" name="password" placeholder="Digite sua Senha">
-
-                <div class="buttons">
-                    <div class="button gray cancel">Cancelar</div>
-                    <button class="button red">Sim, Excluir</button>
-                </div>
-            </form>
-        </div>
-    </div>
+				<div class="buttons">
+					<div class="button gray cancel">Cancelar</div>
+					<button class="button red">Sim, Excluir</button>
+				</div>
+			</form>
+		</div>
+	</div>
 
 
 </body>
