review code alert

--- a/src/views/noroom.ejs
+++ b/src/views/noroom.ejs
@@ -3,7 +3,7 @@
 <head>
     <title>Nenhuma sala com esse número</title>
     <script>
-        confirm("Nenhuma sala com essa número")
+        confirm("Nenhuma sala com esse número")
         window.location.replace("/")
     </script>
 </head>
