--- a/public/styles/modal.css
+++ b/public/styles/modal.css
@@ -63,3 +63,14 @@
 .modal-wrapper .modal .buttons>.button {
     padding: 1.3rem 3.2rem;
 }
+
+.modal-wrapper .modal-alert{
+    width: min(25rem, 50%);
+    background: var(--background);
+    margin: auto;
+    border-radius: .8rem;
+    font-family: 'Poppins', sans-serif;
+    text-align: center;
+    padding: 3rem;
+    color: var(--titulos);
+}
