--- a/src/views/room.ejs
+++ b/src/views/room.ejs
@@ -28,7 +28,7 @@
 	<div id="room" class="content">
 		<header>
 			<a href="/">
-				<img src="/images/logo.svg" alt="Rocket.Q Logo" class="logo" id="logo" />
+				<img src="/images/Logo.svg" alt="Rocket.Q Logo" class="logo" id="logo" />
 			</a>
 			<div class="buttons">
 
@@ -52,7 +52,8 @@
 				<h2>Faça sua pergunta</h2>
 				<form action="/question/create/<%= roomId %>" method="POST">
 					<label class="sr-only" for-id="question">O que você quer perguntar?</label>
-					<textarea required name="question" id="question" placeholder="O que você quer perguntar?"></textarea>
+					<textarea required name="question" id="question"
+						placeholder="O que você quer perguntar?"></textarea>
 
 					<footer>
 						<div>
@@ -84,12 +85,12 @@
 											</div>
 										</div>
 										<div class="actions">
-											<a class="check" href="#" data-id="<%= question.id %>"><img src="/images/check.svg"
-													alt="Marcar como lida">Marcar
+											<a class="check" href="#" data-id="<%= question.id %>"><img
+													src="/images/check.svg" alt="Marcar como lida">Marcar
 												como lida
 											</a>
-											<a class="delete" href="#" data-id="<%= question.id %>"><img src="/images/trash.svg"
-													alt="Excluir">Excluir</a>
+											<a class="delete" href="#" data-id="<%= question.id %>"><img
+													src="/images/trash.svg" alt="Excluir">Excluir</a>
 										</div>
 									</div>
 									<% }) %>
@@ -107,29 +108,26 @@
 													</div>
 												</div>
 												<div class="actions">
-													<a class="delete" href="#" data-id="<%= questionRead.id %>"><img src="/images/trash.svg"
-															alt="Excluir">Excluir</a>
+													<a class="delete" href="#" data-id="<%= questionRead.id %>"><img
+															src="/images/trash.svg" alt="Excluir">Excluir</a>
 												</div>
 											</div>
 											<% }) %>
 				</div>
-
 			</section>
 
 			<!-- distanciando as questions do fim da pag com sr-only -->
 			<footer class="footer">
 				<h2 class="sr-only">footer</h2>
 			</footer>
-			<% if (error == "incorrectPassword") { %>
+			<% if (error=="incorrectPassword" ) { %>
 				<script>
-					alert("Senha incorreta")
-					const url = window.location.href;
-					const parts = url.split('/')
-					// pega o id da página
-					const id = parts[parts.length - 2]
-					window.location.href = `/room/${id}`
+					window.onload = () => {
+						alert('\nSenha Incorreta')
+						window.location.href = `/room/<%= roomId %>`
+					}
 				</script>
-			<% } %>
+				<% } %>
 		</main>
 
 	</div>
