--- a/src/views/parts/enter-room.ejs
+++ b/src/views/parts/enter-room.ejs
@@ -2,7 +2,7 @@
     <h2>Entre como participante</h2>
     <form action="/enter-room" method="POST">
         <label class="sr-only" for="room-id">Código da sala</label>
-        <input name="roomId" type="number" id="room-id" placeholder="Código da sala">
+        <input required name="roomId" type="number" id="room-id" placeholder="Código da sala">
         <button>
             <img src="/images/enter-room.svg" alt="Entrar na sala">
             Entrar na sala
